--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.6.0",
     "@uiw/react-md-editor": "^4.0.4",
     "appwrite": "^15.0.0",
-    "class-variance-authority": "^0.7.0",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "immer": "^10.1.1",
@@ -23,11 +25,13 @@
     "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
+    "react-icon-cloud": "^4.1.7",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
